{
  "version": 4,
  "terraform_version": "1.1.9",
  "serial": 37,
  "lineage": "ed19d0ca-981f-12f1-ee70-459adece7a25",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_elb",
      "name": "elb_demo",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:us-east-1:627958207267:loadbalancer/terraform-elb-10pm",
            "availability_zones": [
              "us-east-1a",
              "us-east-1b",
              "us-east-1c",
              "us-east-1d",
              "us-east-1f"
            ],
            "connection_draining": true,
            "connection_draining_timeout": 400,
            "cross_zone_load_balancing": true,
            "desync_mitigation_mode": "defensive",
            "dns_name": "terraform-elb-10pm-1012400031.us-east-1.elb.amazonaws.com",
            "health_check": [
              {
                "healthy_threshold": 2,
                "interval": 30,
                "target": "HTTP:80/",
                "timeout": 3,
                "unhealthy_threshold": 2
              }
            ],
            "id": "terraform-elb-10pm",
            "idle_timeout": 400,
            "instances": [
              "i-023747eaf04868b96",
              "i-07c2ed7c2f79ebbe7",
              "i-0b301d80777f58f00",
              "i-0f2221cb99a8780ef"
            ],
            "internal": false,
            "listener": [
              {
                "instance_port": 80,
                "instance_protocol": "http",
                "lb_port": 80,
                "lb_protocol": "http"
              }
            ],
            "name": "terraform-elb-10pm",
            "security_groups": [
              "sg-0dcd183eb35aade95"
            ],
            "source_security_group": "627958207267/my_sg",
            "source_security_group_id": "sg-0dcd183eb35aade95",
            "subnets": [
              "subnet-01bac566af2d6b3ea",
              "subnet-031a9317126185cfb",
              "subnet-050df2731e94713f6",
              "subnet-052d91f8e202dbbfb",
              "subnet-0a568ecb187437fd1"
            ],
            "tags": {
              "Name": "terraform-elb-10pm"
            },
            "tags_all": {
              "Name": "terraform-elb-10pm"
            },
            "zone_id": "Z35SXDOTRQ7X7K"
          },
          "dependencies": [
            "aws_security_group.my_sg",
            "aws_subnet.sub1",
            "aws_subnet.sub2",
            "aws_subnet.sub3",
            "aws_subnet.sub4",
            "aws_subnet.sub5",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "web_server1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-026b57f3c383c2eec",
            "arn": "arn:aws:ec2:us-east-1:627958207267:instance/i-00f98c576f41bac4b",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-00f98c576f41bac4b",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "8aws-7am",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-0803cd8af8fc9205c",
            "private_dns": "ip-10-0-0-63.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.0.63",
            "public_ip": "44.202.221.211",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-06ea976521b91fc01",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0a568ecb187437fd1",
            "tags": {
              "Location": "Bangalore",
              "Name": "WebServer-1"
            },
            "tags_all": {
              "Location": "Bangalore",
              "Name": "WebServer-1"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0dcd183eb35aade95"
            ]
          },
          "dependencies": [
            "aws_security_group.my_sg",
            "aws_subnet.sub1",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "gw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:627958207267:internet-gateway/igw-0e6d2e2a1f1033b2c",
            "id": "igw-0e6d2e2a1f1033b2c",
            "owner_id": "627958207267",
            "tags": {
              "Name": "iGW-9pm"
            },
            "tags_all": {
              "Name": "iGW-9pm"
            },
            "vpc_id": "vpc-0f47977b6b813f6d4"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "pub_rt",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:627958207267:route-table/rtb-0c2768c2754e44ffa",
            "id": "rtb-0c2768c2754e44ffa",
            "owner_id": "627958207267",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0e6d2e2a1f1033b2c",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "Pub_rt_9pm"
            },
            "tags_all": {
              "Name": "Pub_rt_9pm"
            },
            "timeouts": null,
            "vpc_id": "vpc-0f47977b6b813f6d4"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.gw",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-009fc4ba5ce64827d",
            "route_table_id": "rtb-0c2768c2754e44ffa",
            "subnet_id": "subnet-0a568ecb187437fd1"
          },
          "dependencies": [
            "aws_internet_gateway.gw",
            "aws_route_table.pub_rt",
            "aws_subnet.sub1",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "b",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-09e1ea27a181e5278",
            "route_table_id": "rtb-0c2768c2754e44ffa",
            "subnet_id": "subnet-031a9317126185cfb"
          },
          "dependencies": [
            "aws_internet_gateway.gw",
            "aws_route_table.pub_rt",
            "aws_subnet.sub2",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "c",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0d03cf4a9d0661082",
            "route_table_id": "rtb-0c2768c2754e44ffa",
            "subnet_id": "subnet-052d91f8e202dbbfb"
          },
          "dependencies": [
            "aws_internet_gateway.gw",
            "aws_route_table.pub_rt",
            "aws_subnet.sub3",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "d",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0b0fc2c17ee7fe7b3",
            "route_table_id": "rtb-0c2768c2754e44ffa",
            "subnet_id": "subnet-01bac566af2d6b3ea"
          },
          "dependencies": [
            "aws_internet_gateway.gw",
            "aws_route_table.pub_rt",
            "aws_subnet.sub4",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "e",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0908550dfe9e16c81",
            "route_table_id": "rtb-0c2768c2754e44ffa",
            "subnet_id": "subnet-050df2731e94713f6"
          },
          "dependencies": [
            "aws_internet_gateway.gw",
            "aws_route_table.pub_rt",
            "aws_subnet.sub5",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "my_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:627958207267:security-group/sg-0dcd183eb35aade95",
            "description": "my_sg",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [
                  "::/0"
                ],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0dcd183eb35aade95",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "http",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "ssh",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "my_sg",
            "name_prefix": "",
            "owner_id": "627958207267",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "my_sg_terraform-8am"
            },
            "tags_all": {
              "Name": "my_sg_terraform-8am"
            },
            "timeouts": null,
            "vpc_id": "vpc-0f47977b6b813f6d4"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "sub1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:627958207267:subnet/subnet-0a568ecb187437fd1",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.0.0.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0a568ecb187437fd1",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "627958207267",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "Public-Subnet-1"
            },
            "tags_all": {
              "Name": "Public-Subnet-1"
            },
            "vpc_id": "vpc-0f47977b6b813f6d4"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "sub2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:627958207267:subnet/subnet-031a9317126185cfb",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-031a9317126185cfb",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "627958207267",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "Public-Subnet-2"
            },
            "tags_all": {
              "Name": "Public-Subnet-2"
            },
            "vpc_id": "vpc-0f47977b6b813f6d4"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "sub3",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:627958207267:subnet/subnet-052d91f8e202dbbfb",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1c",
            "availability_zone_id": "use1-az4",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-052d91f8e202dbbfb",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "627958207267",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "Public-Subnet-3"
            },
            "tags_all": {
              "Name": "Public-Subnet-3"
            },
            "vpc_id": "vpc-0f47977b6b813f6d4"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "sub4",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:627958207267:subnet/subnet-01bac566af2d6b3ea",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1d",
            "availability_zone_id": "use1-az6",
            "cidr_block": "10.0.3.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-01bac566af2d6b3ea",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "627958207267",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "Public-Subnet-4"
            },
            "tags_all": {
              "Name": "Public-Subnet-4"
            },
            "vpc_id": "vpc-0f47977b6b813f6d4"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "sub5",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:627958207267:subnet/subnet-050df2731e94713f6",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1f",
            "availability_zone_id": "use1-az5",
            "cidr_block": "10.0.4.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-050df2731e94713f6",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "627958207267",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "Public-Subnet-5"
            },
            "tags_all": {
              "Name": "Public-Subnet-5"
            },
            "vpc_id": "vpc-0f47977b6b813f6d4"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:627958207267:vpc/vpc-0f47977b6b813f6d4",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-0963dffbaaeb5b3b2",
            "default_route_table_id": "rtb-0b4728c1def934a77",
            "default_security_group_id": "sg-0477129f5d7092dcb",
            "dhcp_options_id": "dopt-086635497dc9d93d4",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0f47977b6b813f6d4",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0b4728c1def934a77",
            "owner_id": "627958207267",
            "tags": {
              "Name": "terraform-vpc"
            },
            "tags_all": {
              "Name": "terraform-vpc"
            }
          }
        }
      ]
    }
  ]
}